log/build_2025-01-04_23-08-56/mypkg/stderr.log
  File "/home/natsu/robosys2024-ros2/install/mypkg/lib/python3.8/site-packages/mypkg/cpu_monitor.py", line 23
    threshold int(cpu_load // 10) * 10
              ^
SyntaxError: invalid syntax

